# project1

./: ReadMe.md  pyproject.toml
complete/: .dockerignore  Dockerfile  crud.py  database.py  fantasy_data.db  main.py  models.py  requirements.txt  schemas.py  test_main.py
